--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "classnames": "^2.5.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
